[tool.poetry]
name = "pybeerxml"
version = "2.0.0"
description = "A BeerXML implementation for Python"
authors = ["Tom Herold <heroldtom@gmail.com>"]
repository = "https://github.com/hotzenklotz/picobrew-server"
keywords = ["pybeerxml", "beerxml"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"
black = "^20.8b1"
pylint = "^2.6.0"
mypy = "^0.782"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
