[project]
name = "pybeerxml"
version = "2.2.0"
description = "A BeerXML implementation for Python"
authors = [{ name = "Tom Herold", email = "heroldtom@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
keywords = ["pybeerxml", "beerxml"]
requires-python = ">=3.10"

[project.urls]
Repository = "https://github.com/hotzenklotz/pybeerxml/"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
    "ty>=0.0.1",
    "zensical",
    "mkdocstrings-python",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
